<resources>
    <string name="app_name">Shark</string>

    <!-- SideNav / Menu -->
    <string name="sidenav_drawer_open">open</string>
    <string name="sidenav_drawer_close">close</string>

    <string name="sidenav_menu_cat_system">System</string>
    <string name="side_nav_item_settings">Settings</string>
    <string name="side_nav_item_log">Logs</string>

    <string name="sidenav_menu_cat_modules">Modules</string>
    <string name="side_nav_item_nfc">NFC Benchmark</string>
    <string name="side_nav_item_mariodemo">Demo</string>
    <string name="side_nav_item_wifidirect">WiFi direct</string>
    <string name="side_nav_item_wifidirectList">WiFi Direct List</string>

    <!-- modules / activities -->
    <!--   intro -->
    <string name="activity_intro_text">Welcome to our Shark Demo App.\nSlide from left to right to discover Settings\nand available Modules.</string>

    <!--   settings -->
    <string name="system_modules_settings_title_cat_kb">KnowledgeBase</string>
    <string name="system_modules_settings_edit_kb_owner">Owner for your new KnowlegdeBases</string>
    <string name="system_modules_settings_title_kb">Choose your KnowlegdeBase</string>
    <string name="system_modules_settings_title_cat_kp">KnowledgePort</string>
    <string name="system_modules_settings_title_kp">NOT IMPLEMENTED, Choose your KnowledgePort</string>
    <string name="system_modules_settings_title_cat_connection">Connection</string>
    <string name="system_modules_settings_title_connection">NOT IMPLEMENTED, Choose your connection type</string>
    <string name="system_modules_settings_title_cat_log">Shark L</string>
    <string name="system_modules_settings_log_level">Set shark log level</string>

    <!--   log -->
    <string name="activity_log_next_button">next</string>

    <!--   mariodemo -->
    <string name="mariodemo_menu_item_example">Settings</string>
    <string name="marioodemo_menu_item_details">Favorite</string>
    <string name="mariodemo_menu_item_show_log">Show Log</string>

    <!--   nfc -->
    <string name="menu_nfc_log">Log</string>

    <string name="activity_nfc_welcome_benchmark">Benchmark</string>
    <string name="activity_nfc_welcome_benchmark_hint">Test pure NFC interface and measure data throughput with different package sizes.</string>
    <string name="activity_nfc_welcome_sharkdemo">NFC Data Demo</string>
    <string name="activity_nfc_welcome_sharkdemo_hint">Test NFC with SharkFW/ASIP to transfer text messages.</string>
    <string name="activity_nfc_welcome_pkidemo">NFC PKI Demo</string>
    <string name="activity_nfc_welcome_pkidemo_hint">Test NFC with SharkFW/ASIP to exchange Shark PKI certificates.</string>
    <string name="activity_nfc_welcome_credits_hint">Developed by Mario Neises.</string>

    <string name="activity_nfc_welcome_enable">Enable NFC first</string>
    <string name="activity_nfc_no_nfc_too_old">Your Android Version is too old (Found API: %1$d). Requires at least Kitkat (API:%2$d)</string>
    <string name="activity_nfc_no_nfc_adapter_not_found">NFC Adapter not found</string>
    <string name="activity_nfc_no_nfc_support">NFC not supported: %1$s</string>

    <string name="activity_nfc_benchmark_start">start benchmark</string>
    <string name="activity_nfc_benchmark_ready">benchmark prepared</string>
    <string name="activity_nfc_benchmark_stop">abort benchmark</string>
    <string name="activity_nfc_benchmark_abort">reset benchmark</string>
    <string name="activity_nfc_benchmark_back">go back</string>

    <string name="activity_nfc_benchmark_start_button_hint">Toggle benchmark state here. Other device will detect benchmark automatically, therefore you do not need to prepare anything. Technically the PREPARED device will be an NFC Reader, the other one acts as SmartCard.</string>
    <string name="activity_nfc_benchmark_description">Press button to prepare your device. Connect other device physically with this screen open (but DO NOT press start button).\n\nBenchmark will start immediately after connection is setup and results will be reported to Log.\n\nAdjust message size (in byte) send within each tag detection. Default: 1024 bytes</string>
    <string name="activity_nfc_benchmark_description2">Set duration of benchmark in seconds. Default: 30s</string>

    <string name="activity_nfc_sharkdemo_input_hint">Add information</string>
    <string name="activity_nfc_sharkdemo_hint_add">Adds texts to internal storage</string>
    <string name="activity_nfc_sharkdemo_hint_clear">Clears current list</string>
    <string name="activity_nfc_sharkdemo_hint_send">Starts negotiating about nfc mode - ether act as SmartCard or Reader. After that it will exchange information stored.</string>
    <string name="activity_nfc_sharkdemo_toast_nothing_to_send">Cannot sent empty information. Please add something first.</string>
    <string name="activity_nfc_sharkdemo_toast_connect_now">Prepare sending by pressing the arrow button.</string>
    <string name="activity_nfc_sharkdemo_exception_data_not_well_serialized">Data was not serialized / deserialized well.\nInput was: %1$s\nOutput was: %2$s</string>

    <string name="activity_nfc_pki_tab_me">My peer</string>
    <string name="activity_nfc_pki_tab_cert_list">Certs</string>
    <string name="activity_nfc_pki_peer_name">Peer Name</string>
    <string name="activity_nfc_pki_peer_addresses">List of addresses</string>
    <string name="activity_nfc_pki_peer_address_add_hint">Add Address</string>
    <string name="activity_nfc_pki_peer_sis">List of subject identifiers</string>
    <string name="activity_nfc_pki_peer_si_add_hint">Add Subject Identifier</string>
    <string name="activity_nfc_pki_create_cert">Create new certificate</string>
    <string name="activity_nfc_pki_share_cert">Share certificates</string>

    <string name="service_description">APDU service</string>
    <string name="aid_description">AID description</string>

    <!-- WifiDirect-->
    <string name="menu_wifidirect_start">Start</string>
    <string name="menu_wifidirect_stop">Stop</string>
    <string name="menu_wifidirect_refresh">Refresh</string>
    <string name="menu_wifidirect_log">Log</string>
    <string name="menu_wifidirect_back">Close</string>

</resources>
