<?xml version="1.0" encoding="utf-8"?>
<de.htw_berlin.sharkandroidstack.modules.nfc.pkidemo.CertManagerMyIdentityTab xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/module_nfc_pki_peer_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_nfc_pki_peer_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/module_nfc_pki_peer_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_horizontal"
            android:text="@string/activity_nfc_pki_peer_sis"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/module_nfc_pki_peer_si_list"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:transcriptMode="alwaysScroll" />

        <LinearLayout
            android:id="@+id/module_nfc_pki_peer_si_add_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/module_nfc_pki_peer_si_add_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activity_nfc_pki_peer_si_add_hint" />

            <ImageButton
                android:id="@+id/module_nfc_pki_peer_si_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_horizontal"
            android:text="@string/activity_nfc_pki_peer_addresses"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/module_nfc_pki_peer_address_list"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:transcriptMode="alwaysScroll" />

        <LinearLayout
            android:id="@+id/module_nfc_pki_peer_address_add_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/module_nfc_pki_peer_address_add_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activity_nfc_pki_peer_address_add_hint" />

            <ImageButton
                android:id="@+id/module_nfc_pki_peer_address_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@android:drawable/ic_menu_add" />

        </LinearLayout>

        <include
            android:id="@+id/module_pki_cert_list_entry"
            layout="@layout/module_pki_cert_list_entry" />

        <Button
            android:id="@+id/module_nfc_pki_create_cert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/activity_nfc_pki_create_cert" />

    </LinearLayout>

</de.htw_berlin.sharkandroidstack.modules.nfc.pkidemo.CertManagerMyIdentityTab>
